--- a/src/utils/Error404/error.module.css
+++ b/src/utils/Error404/error.module.css
@@ -1,7 +1,10 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.container img {
     height: 80vh;
 }
 .image {
