--- a/src/components/Profile/profile.module.css
+++ b/src/components/Profile/profile.module.css
@@ -21,8 +21,6 @@
 }
 
 .logout {
-    position: absolute;
-    left: 50px;
     font-weight: 500;
     padding: 0;
     border: none;
@@ -33,9 +31,16 @@
     text-align: center;
 }
 
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+}
+
 .image {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 150px;
     height: 150px;
@@ -57,12 +62,18 @@
     margin-top: 20px;
 }
 
-
-.button {
+.bottomBtns .button {
+    border-radius: 20px;
+    min-width: 150px;
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.bottomBtns{
-    padding-left: 20px;
+
+
+.bottomBtns {
+    display: flex;
+    justify-content: space-around;
+    width: 100%
 }
