--- a/src/components/Login/login.module.css
+++ b/src/components/Login/login.module.css
@@ -2,7 +2,12 @@
 border: 1px solid white;
     background: #f5f6f7;
     width: 500px;
-    height: 450px;
+    height: 480px;
     padding: 30px;
     border-radius: 20px;
+}
+.boxStyles{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
