--- a/src/components/Registration/Registration.module.css
+++ b/src/components/Registration/Registration.module.css
@@ -12,6 +12,11 @@
     height: 530px;
     border-radius: 20px;
 }
+.boxStyles{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 
 
