--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,22 @@ body {
   background-image: linear-gradient(90deg, antiquewhite, aquamarine);
   height: 100vh;
 }
+a{
+  text-decoration: none;
+  color: inherit;
+
+}
+a span{
+  display: inline-block;
+  transition: 0.2s ease-in-out all;
+}
+
+a span:hover{
+  transform:scale(1.05);
+  color: firebrick;
+
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
