--- a/src/components/Profile/profile.module.css
+++ b/src/components/Profile/profile.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 30%;
 }
 
 .block {
@@ -10,6 +11,7 @@
     padding: 20px;
     border-radius: 20px;
     margin-top: 5px;
+    width: 100%;
 }
 
 .textH2 {
