--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   background-image: linear-gradient(90deg, antiquewhite, aquamarine);
   height: 100vh;
+  overflow: hidden;
 }
 a{
   text-decoration: none;
@@ -34,4 +35,20 @@ ol {
 }
 #root {
   height: 100vh;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+  background-color: transparent;
+  overflow: hidden;
+}
+
+/* ползунок скроллбара */
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  border-radius: 1em;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: transparent;
 }
