--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,6 +1,5 @@
 .headerHolder {
     position: fixed;
-    right: 0;
     z-index: 50;
     display: flex;
     justify-content: center;
@@ -8,6 +7,8 @@
     height: 85%;
     background-color: rgba(0, 0, 0, 0);
     padding: 70px 0;
+    top: -370px;
+    transform: rotate(270deg);
 }
 
 .nav {
