--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,5 +1,37 @@
-.btns{
-    width: 100px;
-    height: 30px;
+.btnsDelete {
+    height: 25px;
+    width: 56px;
+    left: 6px;
+    top: 5px;
     margin: 5px;
+}
+
+.btnsEdit {
+    height: 25px;
+    width: 51px;
+    left: 6px;
+    top: 5px;
+    margin: 5px;
+}
+
+.btnsAdd {
+    height: 30px;
+    width: 115px;
+    margin: 10px;
+    padding: 15px;
+    bottom: 10px;
+    border-radius: 15px;
+}
+
+.btnsBack {
+    height: 30px;
+    width: 65px;
+    margin: 10px;
+    padding: 15px;
+    border-radius: 15px;
+}
+
+.container {
+    border: 1px solid #fff;
+    border-radius: 5px;
 }
