--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -31,6 +31,10 @@
     border-radius: 15px;
 }
 
+.mainContainer {
+    margin: 30px auto;
+}
+
 .container {
     border: 1px solid #fff;
     border-radius: 5px;
