--- a/src/components/TrainCard/TrainCard.module.css
+++ b/src/components/TrainCard/TrainCard.module.css
@@ -8,8 +8,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+    border: 1px solid #fff;
 }
+
 .navBtns{
     display: flex;
     justify-content: space-evenly;
