--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   background-image: linear-gradient(90deg, antiquewhite, aquamarine);
   height: 100vh;
-  /*overflow: hidden;*/
+  overflow: hidden;
 }
 a{
   text-decoration: none;
