--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -1,6 +1,6 @@
 .MainPage {
     background-color: aliceblue;
-    height: 80vh;
+    height: 55vh;
     display: flex;
     margin-top: 100px;
     margin-bottom: 100px;
@@ -22,10 +22,11 @@
 }
 
 .allPacks{
+    min-height: 500px;
+    max-height: 500px;
     margin: 10px;
     padding: 10px;
     overflow: auto;
-    height: calc(75vh - 100px);
     border: 1px solid #fff;
 }
 
