--- a/src/components/ProfilePacks/ProfilePacks.module.css
+++ b/src/components/ProfilePacks/ProfilePacks.module.css
@@ -1,30 +1,33 @@
 .MainPage {
     background-color: aliceblue;
-    height: 90vh;
+    height: 55vh;
     display: flex;
     margin-top: 100px;
     margin-bottom: 100px;
     min-width: 85%;
     max-width: 85%;
-
 }
 
 .sideBar {
     width: 20%;
     background-color: rgb(184 245 213 / 54%);
     padding: 23px;
-
+    border: 1px solid #fff;
 }
 
 .packList {
     width: 80%;
     position: relative;
-
+    border: 1px solid #fff;
 }
-.allPacks{
+
+.allPacks {
+    min-height: 500px;
+    max-height: 500px;
+    margin: 10px;
     padding: 10px;
     overflow: auto;
-    height: calc(100vh - 235px);
+    border: 1px solid #fff;
 }
 
 .packListHeader {
@@ -35,6 +38,8 @@
 }
 
 .searchAndAdd {
+    padding: 10px;
+    margin: 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -48,18 +53,20 @@
     margin-bottom: 10px;
     flex-direction: column;
     margin-top: 20px;
-
 }
+
 .editBtn {
     height: 26px;
     width: 140px;
     margin: 12px;
 }
-.avatarImg{
+
+.avatarImg {
     border-radius: 50%;
     width: 190px;
 }
-.doubleRange{
+
+.doubleRange {
     margin-top: 20px;
     font-size: 12px;
 }
