--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -1,6 +1,6 @@
 .MainPage {
     background-color: aliceblue;
-    height: 55vh;
+    /*height: 55vh;*/
     display: flex;
     margin-top: 100px;
     margin-bottom: 100px;
