--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -4,27 +4,25 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    height: 85%;
     background-color: rgba(0, 0, 0, 0);
-    padding: 70px 0;
-    top: -550px;
-    transform: rotate(270deg);
+    top: 0;
+
 }
 
 .nav {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     padding-left: 0;
     list-style: none;
-    height: 40%;
+    width: 50%;
+    justify-content: space-between;
 }
 
 .navigation {
-    width: 70px;
-    height: 100%;
+    width: 700px;
+    height: 60px;
     position: relative;
-    border-radius: 10px 0 0 10px;
+    border-radius: 0 0 10px 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -53,7 +51,7 @@
     text-align: center;
     font-size: 14px;
     font-weight: bolder;
-    background-color: #FF651C;
+    background-color: #7b7b7b;
     color: white;
     padding: 5px 10px;
     border-radius: 5px;
@@ -67,8 +65,8 @@
     bottom: 0;
     right: -19px;
     border: 10px solid transparent;
-    border-left-color: #FF651C;
-    border-bottom-color: #FF651C;
+    border-left-color: #7b7b7b;
+    border-bottom-color: #7b7b7b;
 }
 
 .icon:hover + .tip {
@@ -125,7 +123,7 @@
 
     .tip::after {
         border: 10px solid transparent;
-        border-top-color: #FF651C;
+        border-top-color: #7b7b7b;
         bottom: -50%;
         right: 20%;
     }
