--- a/src/components/ProfilePacks/ProfilePacks.module.css
+++ b/src/components/ProfilePacks/ProfilePacks.module.css
@@ -76,3 +76,9 @@
     justify-content: center;
     align-items: center;
 }
+
+.nameContainer {
+    margin: 0 8px;
+    font-weight: bolder;
+    font-size: 1.2rem;
+}
