--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,44 +1,34 @@
 .btnsDelete {
-    height: 25px;
-    width: 56px;
-    left: 6px;
-    top: 5px;
-    margin: 5px;
+    height: 30px;
+    width: 150px;
 }
 
 .btnsEdit {
-    height: 25px;
-    width: 51px;
-    left: 6px;
-    top: 5px;
-    margin: 5px;
+    height: 30px;
+    width: 150px;
 }
 
 .btnsAdd {
     height: 30px;
-    width: 115px;
-    margin: 10px;
-    padding: 15px;
-    bottom: 10px;
-    border-radius: 15px;
+    width: 150px;
 }
 
 .btnsBack {
-    height: 30px;
     width: 65px;
-    margin: 10px;
-    padding: 15px;
-    border-radius: 15px;
 }
 
 .mainContainer {
     margin: 30px auto;
-    width: 80%;
+    min-width: 80%;
+    max-height: 80%;
 }
 
 .container {
+    height: 700px;
     border: 1px solid #fff;
     border-radius: 5px;
+    max-height: 50%;
+    overflow: auto;
 }
 
 .search {
@@ -58,4 +48,8 @@
 }
 .cursor:hover {
     color: #dc4f4f;
+}
+
+.input {
+    width: 100%;
 }
