--- a/src/components/ProfilePacks/ProfilePacks.module.css
+++ b/src/components/ProfilePacks/ProfilePacks.module.css
@@ -1,6 +1,5 @@
 .MainPage {
     background-color: aliceblue;
-    /*height: 55vh;*/
     display: flex;
     margin-top: 100px;
     margin-bottom: 100px;
@@ -81,4 +80,11 @@
     margin: 0 8px;
     font-weight: bolder;
     font-size: 1.2rem;
+}
+
+.image {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    margin: 0 auto;
 }
