--- a/src/components/PacksList/PacksList.module.css
+++ b/src/components/PacksList/PacksList.module.css
@@ -27,5 +27,5 @@
 }
 .cursor:hover {
     color: #dc4f4f;
-    background-color: rgb(184 245 213 / 54%);
+    /*background-color: rgb(184 245 213 / 54%);*/
 }
