--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -32,6 +32,13 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
+    position: relative;
+}
+.uploadPhoto{
+    position: absolute;
+    right: -30px;
+    bottom: 4px;
+
 }
 
 .imageBlock {
