--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -24,7 +24,7 @@
 }
 
 .container {
-    height: 700px;
+    /*height: 700px;*/
     border: 1px solid #fff;
     border-radius: 5px;
     max-height: 50%;
